--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/5_coffee/5_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/5_coffee/5_37.yaml
@@ -9,7 +9,7 @@ step_annotations:
 - description: Measure-Measure 12 ounces of cold water
   end_time: 82.191
   errors:
-  - description: 8 instead of 12 ounces of water
+  - description: Measure 8 instead of 12 ounces of water
     tag: Measurement Error
   modified_description: Measure-Measure 8 ounces of cold water
   start_time: 41.275
@@ -17,27 +17,36 @@ step_annotations:
 - description: transfer-transfer water to a kettle
   end_time: 122.57388039252635
   errors:
-  - description: transfer-transfer water to a kettle, while splashing some water outside
+  - description: transfer-transfer water to a kettle, while spilling some water outside
     tag: Technique Error
   modified_description: transfer-transfer water to a kettle, while splashing some
     water outside
   start_time: 92.167
   step_id: 70
+- description: Boil-Boil the water. (While the water is boiling, assemble the filter
+    cone)
+  end_time: 143.807
+  start_time: 122.857
+  step_id: 64
 - description: Weigh-Weigh the coffee beans (0.8oz-0.12 oz)
   end_time: 267.803
   errors:
-  - description: 4 instead of (8oz-12oz)
+  - description: Weigh 4 oz instead of (0.8oz-0.12oz)
     tag: Measurement Error
   modified_description: Weigh-Weigh the coffee beans (4oz)
   start_time: 144.126
   step_id: 65
+- description: Prepare-Prepare the filter insert by folding the paper filter in half
+    to create a semi-circle, and in half again to create a quarter-circle
+  end_time: 322
+  errors:
+  - description: roll the paper filter instead of folding it
+    tag: Preparation Error
+  start_time: 277
+  step_id: 62
 - description: Place-Place the paper filter in the dripper
   end_time: 331.266
-  errors:
-  - description: roll the paper filter before placing into the dripper
-    tag: Preparation Error
-  modified_description: Place-Place the ball paper filter in the dripper
-  start_time: 271.017
+  start_time: 323
   step_id: 60
 - description: Grind-Grind the coffee beans until the coffee grounds are the consistency
     of coarse sand, about 20 seconds
@@ -52,16 +61,15 @@ step_annotations:
 - description: spread-spread open filter in dripper to create a cone
   end_time: 431.225
   errors:
-  - description: forget to open the filter
-    tag: Preparation Error
-  modified_description: spread-spread open filter in dripper to create a cone, but
-    forget to open the filter
+  - description: Did not spread it correctly
+    tag: Technique Error
+  modified_description: spread-spread open filter in dripper to create a cone, but forget to open the filter
   start_time: 413.205
   step_id: 59
 - description: Transfer-Transfer the grounds to the filter cone
   end_time: 486.436
   errors:
-  - description: splashing some grounds outside
+  - description: Spilling some grounds outside
     tag: Technique Error
   modified_description: Transfer-Transfer the grounds to the filter cone, while splashing
     some grounds outside
@@ -90,19 +98,13 @@ step_annotations:
   end_time: 740.953
   start_time: 725.9
   step_id: 63
-- description: Prepare-Prepare the filter insert by folding the paper filter in half
-    to create a semi-circle, and in half again to create a quarter-circle
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 62
 - description: check-Once the water has boiled, check the temperature of the water.
     (The water should be between 195-205 degrees Fahrenheit or between 91-96 degrees
     Celsius. If the water is too hot, let it cool briefly.)
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 71
-- description: Boil-Boil the water. (While the water is boiling, assemble the filter
-    cone)
-  end_time: 143.807
-  start_time: 122.857
-  step_id: 64
