--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/5_coffee/5_44.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/5_coffee/5_44.yaml
@@ -5,8 +5,7 @@ step_annotations:
 - description: Weigh-Weigh the coffee beans (0.8oz-0.12 oz)
   end_time: 105.596
   errors:
-  - description: Weigh-Weigh the coffee beans (0.8oz-0.12 oz) directly without using
-      any container. Spilling the coffee beans.
+  - description: Spilling while transferring from packet to weighing scale
     tag: Technique Error
   - description: Weigh-Weigh the coffee beans (0.6-0.7 oz) as coffee beans got spilled.
     tag: Measurement Error
@@ -18,17 +17,17 @@ step_annotations:
   errors:
   - description: Place-Place 3 paper filter in the dripper
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the filter and placing dripper on top of a coffee mug
     tag: Order Error
-  modified_description: Place-Place 3 paper filter in the dripper
   start_time: 110.52199999999999
   step_id: 60
 - description: Place-Place the dripper on top of a coffee mug
   end_time: 207.88400000000001
   errors:
-  - description: Place-Place the dripper on top of a bowl. Use bowl instead of coffee
-      mug.
+  - description: Place-Place the dripper on top of a bowl. Use bowl instead of coffee mug.
     tag: Preparation Error
+  - description: Step performed after placing filter in the dripper
+    tag: Order Error
   modified_description: Place-Place the dripper on top of a bowl
   start_time: 192.352
   step_id: 69
@@ -40,7 +39,7 @@ step_annotations:
       just squashed and tried to make ice cream cone structure of filters. No folding
       was done.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the filter
     tag: Order Error
   modified_description: spread-spread open 3 filters in dripper to create 3 cones
     without actually folding but just compressing one on top of another.
@@ -50,39 +49,24 @@ step_annotations:
     of coarse sand, about 20 seconds
   end_time: 371.294
   errors:
-  - description: Grind-Grind the coffee beans until the coffee grounds are the consistency
-      of coarse sand, about 5 seconds. While transferring from weighing scale to coffee
-      grinder spilling occurs. Also timing is less so coffee beans are not properly
-      grinded and are like pebbles.
+  - description: coffee beans are not properly grinded and are like pebbles.
     tag: Timing Error
-  - description: Grind-Grind the coffee beans until the coffee grounds are the consistency
-      of coarse sand, about 5 seconds. While transferring from weighing scale to coffee
-      grinder spilling occurs. Also timing is less so coffee beans are not properly
-      grinded and are like pebbles.
+  - description:  While transferring from weighing scale to coffee grinder spilling occurs.
     tag: Technique Error
-  modified_description: Grind-Grind the coffee beans until the coffee grounds are
-    the consistency of coarse sand, about 5 seconds.
   start_time: 330.177
   step_id: 67
 - description: Transfer-Transfer the grounds to the filter cone
   end_time: 441.624
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before preparing the filter
     tag: Order Error
   start_time: 388.125
   step_id: 58
 - description: Measure-Measure 12 ounces of cold water
   end_time: 576.299
   errors:
-  - description: Measure-Measure 12 ounces of cold water without using measuring jug.
-      Used weighing scale instead. Got incorrect mesaurement of 12 ounces.
+  - description: Used weighing scale instead of measuring jug for measuring water.
     tag: Preparation Error
-  - description: Measure-Measure 12 ounces of cold water without using measuring jug.
-      Used weighing scale instead. Got incorrect mesaurement of 12 ounces.
-    tag: Measurement Error
-  - description: Step performed after correct order
-    tag: Order Error
-  modified_description: Measure 12 ounces of cold water without using measuring jug.
   start_time: 464.743
   step_id: 68
 - description: transfer-transfer water to a kettle
@@ -96,10 +80,11 @@ step_annotations:
 - description: Pour-Pour a small amount of water into the filter to wet the grounds
   end_time: 728.284
   errors:
-  - description: Pour-Pour a water from tap into the filter by using measuring tsp
-      to wet the grounds
+  - description: Pour from tap into the filter by using measuring cup to wet the grounds
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Did not pour water from kettle into the filter.
+    tag: Preparation Error
+  - description: Step performed before boiling water and preparing the filter
     tag: Order Error
   modified_description: Pour-Pour a water from tap into the filter by using measuring
     tsp to wet the grounds
@@ -109,7 +94,7 @@ step_annotations:
     bubbles or foam on the coffee grounds during this step.)
   end_time: 760.102
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before boiling water and preparing the filter
     tag: Order Error
   start_time: 730.489
   step_id: 56
@@ -120,7 +105,7 @@ step_annotations:
   - description: pour-In a single shot pour the complete water over the grounds. Overfilling
       beyond paper filter occurs
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before boiling water and preparing the filter
     tag: Order Error
   modified_description: pour-In a single shot pour the complete water over the grounds.
     Overfilling beyond paper filter occurs
@@ -130,7 +115,7 @@ step_annotations:
     the dripper
   end_time: 856.777
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before boiling water and preparing the filter
     tag: Order Error
   start_time: 781.013
   step_id: 66
@@ -138,10 +123,9 @@ step_annotations:
     cone)
   end_time: 936.783
   errors:
-  - description: Boil-Boil the water in pan. Take water without measuring from tap.
-      (While the water is boiling, assemble the filter cone)
+  - description: Boil in a pan instead of kettle
     tag: Preparation Error
-  - description: Step performed after correct order
+  - description: Step performed after adding water to the filter
     tag: Order Error
   modified_description: Boil-Boil the water in pan. Take water without measuring from
     tap. (While the water is boiling, assemble the filter cone)
@@ -152,9 +136,12 @@ step_annotations:
     Celsius. If the water is too hot, let it cool briefly.)
   end_time: 969.456
   errors:
-  - description: check-Once the water has boiled, check the temperature of the water.
-      (The water should be between 140-150 degrees Fahrenheit)
+  - description: Temperature of the water is not as expected
     tag: Temperature Error
+  - description: Check temperature in pan instead of kettle
+    tag: Preparation Error
+  - description: Step performed after adding water to the filter
+    tag: Order Error
   modified_description: check-Once the water has boiled, check the temperature of
     the water. (The water should be between 140-150 degrees Fahrenheit)
   start_time: 938.77
@@ -163,14 +150,11 @@ step_annotations:
     to create a semi-circle, and in half again to create a quarter-circle
   end_time: 982.497
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after adding water to the filter
     tag: Order Error
   start_time: 973.311
   step_id: 62
 - description: Discard-Discard the paper filter and coffee grounds
   end_time: 1010.557
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 989.209
   step_id: 63
