--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_29.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_29.yaml
@@ -13,7 +13,7 @@ step_annotations:
 - description: Add-1 tsp Sriracha sauce to the bowl
   end_time: 202.60864808204636
   errors:
-  - description: mug cup instead of bowl
+  - description: Use mug cup instead of bowl
     tag: Preparation Error
   modified_description: Add-1 tsp Sriracha sauce to the mug cup
   start_time: 125.15714272104246
@@ -29,13 +29,16 @@ step_annotations:
 - description: drain-drain excess water from can
   end_time: 287.3563097451738
   errors:
-  - description: remain some water
+  - description: Did not drain the excess water completely
     tag: Preparation Error
   modified_description: drain-drain excess water from can, but remain some water
   start_time: 277.253939480695
   step_id: 328
 - description: Add-add chopped scallion to the bowl
   end_time: 297.4586800096525
+  errors:
+  - description: Use mug cup instead of bowl
+    tag: Preparation Error
   start_time: 288.4787953301159
   step_id: 333
 - description: cut-cut avocado into thin slices
@@ -57,34 +60,50 @@ step_annotations:
 - description: Add-1/4 cup mayonnaise to the bowl
   end_time: 447.8717483918919
   errors:
-  - description: 1/2 instead of 1/4 cup
+  - description: Add 1/2 cup instead of 1/4 cup
     tag: Measurement Error
+  - description: Use mug cup instead of bowl
+    tag: Preparation Error
   modified_description: Add-1/2 cup mayonnaise to the bowl
   start_time: 412.5134524662163
   step_id: 327
 - description: Mix-Mix the contents of the bowl
   end_time: 481.54631594015444
   errors:
-  - description: Splash some contents outside
+  - description: Spill some contents outside
     tag: Technique Error
-  modified_description: Mix-Mix the contents of the bowl, but splash some of them
-    outside
+  - description: Use mug cup instead of bowl
+    tag: Preparation Error
+  modified_description: Mix-Mix the contents of the bowl, but splash some of them outside
   start_time: 457.97411865637065
   step_id: 331
 - description: Season-Season bowl with 1/4 tsp salt
   end_time: 510.16969835617755
   errors:
-  - description: 1 instead of 1/4 tsp
+  - description: Season 1 tsp instead of 1/4 tsp
     tag: Measurement Error
+  - description: Use mug cup instead of bowl
+    tag: Preparation Error
+  - description: Pour instead of season
+    tag: Technique Error
   modified_description: Season-Season bowl with 1 tsp salt
   start_time: 481.54631594015444
   step_id: 338
 - description: Season-season 1/4 tsp pepper on the bowl
   end_time: 539.3543235646719
+  errors:
+  - description: Use mug cup instead of bowl
+    tag: Preparation Error
+  - description: Pour instead of season
+    tag: Technique Error
   start_time: 518.0270974507722
   step_id: 326
 - description: Add-Add 1 can drained tuna to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 334
 - description: top-top lettuce leaves with the tuna mixture
@@ -93,9 +112,17 @@ step_annotations:
   step_id: 332
 - description: Roll-Roll up the lettuce wraps
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 330
 - description: secure-secure the wrap with a toothpick
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 337
