--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_42.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_42.yaml
@@ -22,25 +22,20 @@ step_annotations:
 - description: drain-drain excess water from can
   end_time: 278.49723445945955
   errors:
-  - description: Not draining the can compltely
+  - description: Not draining the tuna can completely
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: drain-do not drain excess water completely from the can
   start_time: 261.5278689189189
   step_id: 328
+- description: Take-Take 1 ripe avocado
+  end_time: 336
+  start_time: 295
+  step_id: 335
 - description: cut-cut avocado into thin slices
   end_time: 453.1818797297297
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  start_time: 310.4395695945946
+  start_time: 337
   step_id: 341
 - description: Add-add chopped scallion to the bowl
   end_time: 499.09898648648664
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 471.14944324324324
   step_id: 333
 - description: Add-1/4 cup mayonnaise to the bowl
@@ -49,40 +44,22 @@ step_annotations:
   step_id: 327
 - description: Add-1 tsp Sriracha sauce to the bowl
   end_time: 617.8845452702703
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 583.9458141891893
   step_id: 339
 - description: Lay-Lay out 2 large lettuce leaves
   end_time: 692.7493932432433
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 636.8503067567568
   step_id: 329
 - description: Add-Add 1 can drained tuna to the bowl
   end_time: 780.5908148648649
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 700.7349770270271
   step_id: 334
 - description: Mix-Mix the contents of the bowl
   end_time: 829.5025155405406
-  errors:
-  - description: Spill something out while mixing the bowl
-    tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Mix-Spill something out while mixing the contents of the bowl
   start_time: 797.5601804054055
   step_id: 331
 - description: place-place avocado slices on each leaf
   end_time: 861.4448506756758
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 829.5025155405406
   step_id: 325
 - description: Season-Season bowl with 1/4 tsp salt
@@ -90,8 +67,6 @@ step_annotations:
   errors:
   - description: Season the bowl with 1/2 tsp salt instead of 1/4th tsp salt
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Season-Season bowl with 1/2 tsp salt
   start_time: 871.4268304054054
   step_id: 338
@@ -100,8 +75,6 @@ step_annotations:
   errors:
   - description: Season with 1/2 tsp turmeric on the bowl
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Season-season 1/2 tsp turmeric on the bowl
   start_time: 905.3655614864865
   step_id: 326
@@ -109,9 +82,7 @@ step_annotations:
   end_time: 979.2322114864864
   errors:
   - description: Topping with tuna not drained completely leads to soggy lettuce leaves
-    tag: Timing Error
-  - description: Step performed before correct order
-    tag: Order Error
+    tag: Preparation Error
   modified_description: Top-Top lettuce leaves with the tuna mixture and leave it
     for 2 min, so that rolling will be difficult
   start_time: 934.3133027027027
@@ -119,21 +90,14 @@ step_annotations:
 - description: Roll-Roll up the lettuce wraps
   end_time: 993.2069831081081
   errors:
-  - description: Spill while rolling the lettuce wraps
+  - description: Did not roll it, just folded the lettuce wraps
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Spill something outside while rolling the lettuce wraps
+    tag: Technique Error
   modified_description: Roll-Spill outside while rolling up the lettuce wraps
   start_time: 978.2340135135136
   step_id: 330
 - description: secure-secure the wrap with a toothpick
   end_time: 1028.1439121621622
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 995.203379054054
   step_id: 337
-- description: Take-Take 1 ripe avocado
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 335
