--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_49.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_49.yaml
@@ -11,7 +11,6 @@ step_annotations:
   errors:
   - description: Using 1/2 cup instead of 1/4 cup and don't fill the cup completely.
     tag: Measurement Error
-  modified_description: Add-Add 1/2 cup partialled filled mayonnaise to the bowl.
   start_time: 175.20527472393826
   step_id: 327
 - description: Take-Take 1 ripe avocado
@@ -22,18 +21,21 @@ step_annotations:
   end_time: 465.73554040540546
   start_time: 353.7372318793436
   step_id: 329
+- description: Chop-Chop 1 scallion
+  end_time: 547
+  start_time: 503
+  step_id: 340
 - description: Add-add chopped scallion to the bowl
   end_time: 566.6449074932433
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
-  start_time: 475.715587699807
+  start_time: 555
   step_id: 333
 - description: Add-1 tsp Sriracha sauce to the bowl
   end_time: 607.673990814672
   errors:
   - description: Using tablespoon instead of teaspoon.
     tag: Measurement Error
+  - description: Spilled while measuring the sauce.
+    tag: Technique Error
   modified_description: Add-Add 1 tbsp Sriracha sauce to the bowl.
   start_time: 566.6449074932434
   step_id: 339
@@ -42,8 +44,6 @@ step_annotations:
   errors:
   - description: Spill some tuna while adding.
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Add-Add 1 can tuna in a bowl and spill some on countertop.
   start_time: 633.1785561225869
   step_id: 334
@@ -52,8 +52,6 @@ step_annotations:
   errors:
   - description: While mixing spilling some of the contents.
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Mix-Mix the contents of the bowl and spill while mixing.
   start_time: 703.0388871833978
   step_id: 331
@@ -69,14 +67,11 @@ step_annotations:
   end_time: 921.4910335164093
   errors:
   - description: Step performed after correct order
-    tag: Order Error
+    tag: Other
   start_time: 870.4819029005793
   step_id: 340
 - description: place-place avocado slices on each leaf
   end_time: 961.4112226940155
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 931.4710808108108
   step_id: 325
 - description: Season-season 1/4 tsp pepper on the bowl
@@ -84,16 +79,11 @@ step_annotations:
   errors:
   - description: Using 1/2 tsp instead of 1/4 tsp.
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Season-season 1/2 tsp pepper on the bowl.
   start_time: 995.7869411525097
   step_id: 326
 - description: top-top lettuce leaves with the tuna mixture
   end_time: 1066.756166357143
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 1033.489342042471
   step_id: 332
 - description: Roll-Roll up the lettuce wraps
@@ -101,23 +91,26 @@ step_annotations:
   errors:
   - description: Not rolling properly and spill some contents.
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Roll-Roll up the lettuce wraps and spill while rolling.
   start_time: 1067.8650605009652
   step_id: 330
 - description: secure-secure the wrap with a toothpick
   end_time: 1133.2898149864866
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 1097.80520238417
   step_id: 337
 - description: Season-Season bowl with 1/4 tsp salt
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 338
 - description: drain-drain excess water from can
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 328
