--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_50.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/28_spicytunaavocadowraps/28_50.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: Open-Open a can of tuna
   end_time: 96.97332436679537
   errors:
-  - description: Spill while opening.
+  - description: Spill while opening the can of tuna.
     tag: Technique Error
   modified_description: Open-Open a can of tuna spilling contents.
   start_time: 16.16222072779923
@@ -13,7 +13,7 @@ step_annotations:
 - description: Add-1 tsp Sriracha sauce to the bowl
   end_time: 172.64190322876448
   errors:
-  - description: Instead of 1 tsp add 1/2 tsp.
+  - description: Add instead of 1 tsp add 1/2 tsp Sriracha sauce.
     tag: Measurement Error
   modified_description: Add-1/2 tsp Sriracha sauce to the bowl
   start_time: 134.44029059942085
@@ -22,10 +22,7 @@ step_annotations:
   end_time: 190.27341675
   errors:
   - description: Not draining the excess water and leaving some water behind.
-    tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Drain-Drain excess water from can and leave some water behind.
+    tag: Technique Error
   start_time: 173.37654962548262
   step_id: 328
 - description: Take-Take 1 ripe avocado
@@ -41,8 +38,6 @@ step_annotations:
   errors:
   - description: Cutting into thick slices contrary to cutting into thin slices.
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Cut-Cut avocado into thick slices
   start_time: 248.3104820907336
   step_id: 341
@@ -51,8 +46,6 @@ step_annotations:
   errors:
   - description: Add 1/2 can instead of 1 can tuna.
     tag: Measurement Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Add-Add 1/2 can drained tuna to the bowl.
   start_time: 401.11693260810813
   step_id: 334
@@ -61,19 +54,25 @@ step_annotations:
   errors:
   - description: Spill while mixing the contents.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before chopping scallions
     tag: Order Error
   modified_description: Mix-Mix the contents of the bowl and spill while mixing.
   start_time: 419.4830925260618
   step_id: 331
+- description: Lay-Lay out 2 large lettuce leaves
+  end_time: 507
+  errors:
+  - description: Using the unwashed lettuce leaves
+    tag: Preparation Error
+  start_time: 455
+  step_id: 329
 - description: top-top lettuce leaves with the tuna mixture
   end_time: 542.1690407779923
   errors:
   - description: Using the unwashed lettuce leaves
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before placing avocado slices on the leaves and adding salt and pepper.
     tag: Order Error
-  modified_description: Top-Top 2 unwashed lettuce leaves with the tuna mixture
   start_time: 459.8886443455599
   step_id: 332
 - description: Season-Season bowl with 1/4 tsp salt
@@ -81,7 +80,7 @@ step_annotations:
   errors:
   - description: Using 1/2 tbsp instead of 1/4 tsp salt.
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed after adding tuna mixture to the leaves.
     tag: Order Error
   modified_description: Season-Season bowl with 1/4 tbsp salt
   start_time: 565.6777254729728
@@ -89,14 +88,14 @@ step_annotations:
 - description: Season-season 1/4 tsp pepper on the bowl
   end_time: 622.2454980202702
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding tuna mixture to the leaves.
     tag: Order Error
   start_time: 603.8793381023166
   step_id: 326
 - description: Chop-Chop 1 scallion
   end_time: 671.466806600386
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after adding tuna mixture to the leaves.
     tag: Order Error
   start_time: 639.1423651447876
   step_id: 340
@@ -105,7 +104,7 @@ step_annotations:
   errors:
   - description: place only on one leaf.
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed after adding tuna mixture to the leaves.
     tag: Order Error
   modified_description: Place-Place avocado slices only on one leaf.
   start_time: 689.8329665183397
@@ -113,29 +112,28 @@ step_annotations:
 - description: Roll-Roll up the lettuce wraps
   end_time: 711.8723584198842
   errors:
-  - description: Not rolling the lettuce properly and spill.
+  - description: Rolling the lettuce wraps in a wrong way.
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Roll-Roll up the lettuce wraps and spill while rolling.
   start_time: 703.7912480559845
   step_id: 330
 - description: secure-secure the wrap with a toothpick
   end_time: 755.951142222973
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 711.137712023166
   step_id: 337
 - description: Add-1/4 cup mayonnaise to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 327
-- description: Lay-Lay out 2 large lettuce leaves
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 329
 - description: Add-add chopped scallion to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 333
